recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:16: error: Missing closing brace `}' assumed here
} 
^